my first capstone project is done. created my resume

--- a/index.html
+++ b/index.html
@@ -6,6 +6,53 @@
     <title>My Resume</title>
 </head>
 <body>
-    
+    <h1>Rupjyoti Barman</h1>
+    <hr/>
+    <img src="./images/rup.JPG" alt="Image of Rup" height="150px" width="130px"/>
+    <hr/>
+    <h2>Summary</h2>
+    <p>Hey Everyone !</p>
+    <p>My Self Rup, I am a IT Engineer with 1 year of work experience in a Globally leading IT company. Currently I am working on Python, JavaScript and Asp.Net also little bit of C#.</p>
+    <hr/>
+    <h2>Education</h2>
+    <ul>
+        <li>
+            <p><b>B.Tech in Computer science</b></p>
+            <p>NERIST, Arunachal Pradesh, Itanagar</p>
+            <p>CGPA - 7.3</p>
+        </li>
+        <li>
+            <p><b>Diploma in Computer science</b></p>
+            <p>Nalpo, Nalbari, Assam</p>
+            <p>CGPA - 9.3</p>
+        </li>
+    </ul>
+    <hr/>
+    <h2>Work Experience</h2>
+    <ul>
+        <li>
+            <p><b>BoldTek India Private Ltd</b></p>
+            <p>5th june 2023 to present</p>
+            <p>working as a Software Engineer</p>
+        </li>
+    </ul>
+    <hr/>
+    <h2>Skill</h2>
+    <ul>
+        <li>C# <img src="./images/3star.png" height="20px" width="100px"/></li>
+        <li>C <img src="./images/3star.png" height="20px" width="100px"/></li>
+        <li>C++ <img src="./images/4star.png" height="20px" width="100px"/></li>
+        <li>Python <img src="./images/4star.png" height="20px" width="100px"/></li>
+        <li>Web Development <img src="./images/3star.png" height="20px" width="100px"/></li>
+    </ul>
+    <hr/>
+    <h2>Others</h2>
+    <ul>
+        <li><a href="./hobbies.html">My Hobbies</a></li>
+        <li><a href="./contact.html">Contact Me</a></li>
+    </ul>
+    <hr/>
+    <p>© Rup Bar. All rights reserved to 2025</p>
+
 </body>
 </html>
