hide private information

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <hr/>
     <h2>Summary</h2>
     <p>Hey Everyone !</p>
-    <p>My Self Rup, I am a IT Engineer with 1 year of work experience in a Globally leading IT company. Currently I am working on Python, JavaScript and Asp.Net also little bit of C#.</p>
+    <p>My Self Rup, I am an IT Engineer with 1 year of work experience in a Globally leading IT company. Currently I am working on Python, JavaScript and Asp.Net also little bit of C#.</p>
     <hr/>
     <h2>Education</h2>
     <ul>
         <li>
             <p><b>B.Tech in Computer science</b></p>
-            <p>NERIST, Arunachal Pradesh, Itanagar</p>
+            <p>NxxxxST, Axxxxxhal xxdesh, xxxnagar</p>
             <p>CGPA - 7.3</p>
         </li>
         <li>
             <p><b>Diploma in Computer science</b></p>
-            <p>Nalpo, Nalbari, Assam</p>
+            <p>Naxx, Nalxxx, xxsam</p>
             <p>CGPA - 9.3</p>
         </li>
     </ul>
@@ -31,8 +31,8 @@
     <h2>Work Experience</h2>
     <ul>
         <li>
-            <p><b>BoldTek India Private Ltd</b></p>
-            <p>5th june 2023 to present</p>
+            <p><b>Bolxxx India Private Ltd</b></p>
+            <p>15th june 1998 to present</p>
             <p>working as a Software Engineer</p>
         </li>
     </ul>
